--- a/occupancygrid.html
+++ b/occupancygrid.html
@@ -38,7 +38,7 @@
 </head>
 
 <body onload="init()">
-  <h1>Wifi See</h1>
+  <h1>Wifi4bot</h1>
   <div class="Grid">
     <div class="Grid-cell" id="nav" align="right"></div>
     <div class="Grid-cell" id="wifi_chart"></div>
